--- a/src/components/technologiesChanges/TechnologiesChanges.scss
+++ b/src/components/technologiesChanges/TechnologiesChanges.scss
@@ -68,7 +68,7 @@
 //max-width:768px
 @include media-lg {
     .technologies-changes {
-        background-image: url("../../assets/img/banner.png");    
+        background-image: url("../../assets/img/welcome.png");    
         background-repeat: no-repeat;
         background-position: right;
         .textwrapper {
